project/test/semantics/unit/bad/input/Bad28_shouldThrowIllegalSideEffectsErrorInFunctionalIfs.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
        
        badAction: (arg1: Bool, arg2: String, arg3: String) -> Int = {
            if (3 > 2) then {
                Pass
            } elif (4 > 2) then {
                Pass
            } elif (5 > 2) then {
                val x: Int = 3;
            } else {
                Pass
            }
            8
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
